# document-qa-prototype

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  base64-creds.py  deploy.py  openapi.yaml  pyproject.toml
.github/workflows/: pre-commit.yml  publish.yml  test.yml
.streamlit/: config.toml
docker/: Dockerfile.api  Dockerfile.prefect  Dockerfilebackup.prefect  entrypoint.sh
docker/api/: Dockerfile
docker/scripts/: generate_document_data.py
notebooks/: check_queries.ipynb  demo_documents.ipynb  experiment_analyis.py  faithfulness_eval_cost_estimation.ipynb  faithfulness_experiment_analysis.ipynb  first_round_eval_analysis.ipynb  get_empty_and_near_empty_documents.ipynb  main_experiment_analysis.ipynb  no_response_case_topic_suggestions.ipynb  retrieval_auto_eval.ipynb  system_prompts.ipynb  understanding_policy_violations.ipynb  vespa_check_available_documents.ipynb  vespa_ranking_examples.ipynb
notebooks/dataset-generation/: analysing_generations_before_unece_sprint.ipynb  analysing_unece_annotations.ipynb  batch_request.ipynb  generations.ipynb  geography-iso-3166-backend.csv  query_generation.ipynb  rag_policy_dataset_analysis.ipynb  red_teaming_argilla_setup.ipynb  red_teaming_post_processing.ipynb  sample_docs_for_unece.ipynb  unece_cpr_generation_dataset.ipynb  unece_question_correlations.ipynb
notebooks/eval/: faithfulness.ipynb  formatting.ipynb
notebooks/prototype-user-queries/: analyse-user-queries.ipynb  query clusters.md
notebooks/retrieval_eval/: 1_check_query_passage_dataset_size.ipynb
notebooks/technical_report/: all_graphs.ipynb  document_geography_data.csv
notebooks/topic_suggestions/: no_response_case_topic_suggestions.ipynb  single_document_topic_suggestions.ipynb
notebooks/unece-postprocessing/: cpr_generation_policy_after_red_teaming.ipynb  cpr_generation_policy_autoeval_analysis.ipynb  filtering_cpr_generation_policy_questions.ipynb
src/: config.py  logger.py  main.py
src/cli/: correlate_evaluations.py  create_argilla_users.py  create_generations.py  create_queries.py  delete_datasets.py  evaluate.py  load_generations_into_argilla.py  push_annotations_to_hub.py  run_ingestion_pipeline.py  utils.py
src/commands/: llm_commands.py
src/configs/: all_models.yaml  answer_config.yaml  argilla_config.yaml  argilla_config_relevance.yaml  argilla_config_unece.yaml  argilla_config_unece_group_1.yaml  argilla_config_unece_group_2.yaml  base_config.yaml  eval_prefect_1_answers_config.yaml  eval_prefect_1_config.yaml  eval_prefect_1_queries_config.yaml  eval_prefect_2_answers_config.yaml  eval_prefect_3_answers_config.yaml  eval_prefect_4_answers_config.yaml  eval_prefect_5_answers_config.yaml  experiment_MAIN_ANSWERS_1.0.yaml  (+10 more)
tests/: test_api.py  test_db.py  test_end_to_end_generation.py  test_library_manager.py  vector_store.py
(+176 files in other folders)
