[tool.poetry]
name = "rag-labs"
version = "0.1.0"
description = ""
authors = ["CPR Data Science <dsci@climatepolicyradar.org>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
fastapi = ">=0.109.0"
cpr-data-access = {git = "https://github.com/climatepolicyradar/data-access.git", rev = "9a2071d60386f38c4f3a7bde9886d2d6ab29e5ae"}
streamlit = "^1.31.1"
langchain = ">=0.2.1"
text-generation = "^0.6.1"
langchain-openai = "^0.1.1"
wandb = "^0.16.6"
langchain-google-genai = ">=1.0.5"
jinja2 = "^3.1.3"
pandarallel = "^1.6.5"
ipywidgets = "^8.1.2"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"
datasets = ">=2.19.1"
langchain-community = "^0.2.1"
seaborn = "^0.13.2"
nltk = "^3.8.1"
catalogue = "^2.0.10"
pyvespa = "^0.41.0"
plotly = "^5.22.0"
peewee = "^3.17.6"
psycopg2-binary = "^2.9.9"
langchain-google-vertexai = "^1.0.7"
prefect = "^2.20.0"
langfuse = "^2.43.1"
langchain-experimental = "^0.0.64"
requests = "2.31.0"
s3fs = {extras = ["boto3"], version = ">=2023.12.0"}
boto3 = "*"
botocore = "*"
prefect-docker = "^0.5.4"
prefect-aws = "^0.4.19"
urllib3 = ">=1.26,<2"
transformers = "^4.44.0"
matplotlib-venn = "^1.1.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.247"
black = "^22.1.0"
pyright = "^1.1.267"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
pytest-dotenv = "^0.5.2"
nbmake = "^1.4.1"
httpx = ">=0.25"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
env_files = """
    .env.test
    .env
"""
markers = [
    "search",
    "unit",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
select = ["E", "F", "D"]
# Docstring Ignores:
# D100 - Missing docstring in public module
# D103 - Missing docstring in public function
# D104 - Missing docstring in public package
# D107 - Missing docstring in __init__
# D202 - No blank lines allowed after function docstring
# D203 - 1 blank line required before class docstring
# D213 - Multi-line docstring summary should start at the first line
# D400 - First line should end with a period
# D401 - First line should be in imperative mood
# D406 - Section name should end with a newline
# D407 - Missing dashed underline after section
# D413 - Missing blank line after last section
# D415 - First line should end with a period, question mark, or exclamation point
ignore = ["D100", "D103", "D104", "D107", "D202", "D203", "D212", "D400", "D401", "D406", "D407", "D413", "D415", "E501"]
line-length = 88

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["E501"]
